Fixed icon size to align icons and text
Added a fixed height/width to the track details icons to align the text as well as stop the current track time from changing positions when pausing and playing the track.

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,8 @@
 
 .NPOS_icon {
   margin-right: 1em;
+  height: 10px;
+  width: 10px;
 }
 
 progress.NPOS_progress {
